apps/shared/forgejo/httproute-private.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-private
  namespace: forgejo
spec:
  parentRefs:
  - name: envoy-gw-private
    namespace: envoy-gateway-system
  hostnames:
  - "git.${domain_wahoo_li:=wahoo.li}"
  rules:
  - backendRefs:
    - name: forgejo-http
      port: 3000
